<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    tools:context="activities.LoginActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/defoult_content_description"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/app_name"
                android:textColor="@color/the_blue"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_layout"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <EditText
                android:id="@+id/editText_pass"
                style="@style/EditTextKeepSafeTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/enter_pass"
                android:inputType="textPassword"
                android:minWidth="100dp"
                android:textColor="@color/medium_gray" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/on_pressed_background_color_change"
                android:onClick="proceed"
                android:text="@string/unlock"
                android:textColor="@color/app_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_enterPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_layout"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <EditText
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/lock_l_g"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/lock_l_g"
                android:ems="10"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:minWidth="100dp"
                android:textColor="@color/dark_gray" />

            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/lock_l_g"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/lock_l_g"
                android:ems="10"
                android:hint="@string/con_pass"
                android:inputType="textPassword"
                android:minWidth="100dp"
                android:textColor="@color/dark_gray" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/on_pressed_background_color_change"
                android:onClick="saveNewPass"
                android:text="@string/done"
                android:textColor="@color/medium_gray" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>